validations :+1:  email added